test/files/neg/symbolic-ops-removal.scala
// scalac: -Xsource:2.14
//
abstract class Foo {
  def +=(a: Int, b: Int): Foo
}
